--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div>
               <div class="user-info">
                 <img
-                  src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/37e5ccfa-f9ee-458b-afa2-dcd85b495e4e"
+                  src="https://cdn4.iconfinder.com/data/icons/professional-avatar-5/48/transcriber_avatar_man_profile_professions-512.png"
                   alt="user" />
-                <p>Jane Wilson</p>
+                <p>USER</p>
               </div>
               <ul>
                 <li class="nav-item active">
