--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 <div class="artist-container containers">
                   <div class="artist">
                     <img
-                     <a href="#"> src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c8feaa0f-6ae7-4c69-bb7d-4a11de76b4f5"
-                      alt="" /> </a>
+                     src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c8feaa0f-6ae7-4c69-bb7d-4a11de76b4f5"
+                      alt="" />
                     <p>Taylor Swift</p>
                   </div>
     
